--- a/src/app.css
+++ b/src/app.css
@@ -1,13 +1,13 @@
 @font-face {
   font-family: "PPMori";
-  src: url("PPMori-Regular.woff2") format("woff2");
+  src: url("/PPMori-Regular.woff2") format("woff2");
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: "PPMori";
-  src: url("PPMori-SemiBold.woff2") format("woff2");
+  src: url("/PPMori-SemiBold.woff2") format("woff2");
   font-weight: bold;
   font-style: normal;
 }
