--- a/src/app.css
+++ b/src/app.css
@@ -98,18 +98,20 @@
   .prose {
     @apply container-grid;
 
-    p {
-      @apply text-fluid-sm leading-relaxed text-pretty;
-      &:not(:last-child) {
-        @apply mb-6;
+    :not(.no-prose) {
+      p {
+        @apply text-fluid-sm leading-relaxed text-pretty;
+        &:not(:last-child) {
+          @apply mb-6;
+        }
+        &.lead {
+          @apply text-fluid-md;
+        }
       }
-      &.lead {
-        @apply text-fluid-md;
-      }
-    }
 
-    a {
-      @apply underline underline-offset-4;
+      a {
+        @apply underline underline-offset-4;
+      }
     }
   }
 }
